Admin V3 - Fixed header text alignment and missing icons (#1940)
* tabs in admin venue view

* removed getTabIcon switch

* removed useless style

--- a/src/components/organisms/AdminVenueView/AdminVenueView.scss
+++ b/src/components/organisms/AdminVenueView/AdminVenueView.scss
@@ -18,27 +18,16 @@
     display: flex;
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
   }
 
   &__tab {
     position: relative;
-    display: flex;
     flex-grow: 1;
     text-align: center;
-    align-self: center;
     cursor: pointer;
     color: rgba($white, 0.6);
     text-decoration: none;
     padding: $spacing--sm $spacing--xl;
-
-    @media (max-width: $media-breakpoint--lg) {
-      width: 50%;
-    }
-
-    @media (max-width: $media-breakpoint--md) {
-      width: 100%;
-    }
 
     &:hover {
       color: $white;
@@ -48,5 +37,17 @@
       color: $white;
       background-color: $primary;
     }
+
+    @media (max-width: $media-breakpoint--lg) {
+      width: 50%;
+    }
+
+    @media (max-width: $media-breakpoint--md) {
+      width: 100%;
+    }
+  }
+
+  &__tabIcon {
+    margin-right: $spacing--sm;
   }
 }
